Fix layout issues: #67, #66, #65, #64, #63, #60, #37

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -219,8 +219,9 @@ main {
       display: flex;
       justify-content: center;
       flex-direction: column;
-      background-size: cover;
-      background-image: url('../img/hero.jpg');
+      //background-size: cover;
+      //background-image: url('../img/hero.jpg');
+      background-color: #0e3f93;
 
       .claim {
 
@@ -235,6 +236,8 @@ main {
           color: #FFF;
           margin-bottom: 0;
           text-align: center;
+          line-height: 5rem;
+          margin-top: 30px;
         }
 
         p {
@@ -377,6 +380,10 @@ main {
         max-width: 32%;
         margin-right: 2%;
 
+        &:last-child {
+          margin-right: 0;
+        }
+
       }
 
     }
@@ -407,7 +414,7 @@ main {
     flex-flow: wrap;
 
     &.has-related-posts {
-      margin-bottom: 370px;
+      margin-bottom: 500px;
     }
 
     ul.taglist {
@@ -476,6 +483,14 @@ main {
         color: $primary;
         font-weight: 600;
       }
+
+      ul {
+        list-style-type: disc;
+        margin-left: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+
     }
 
     .post-social {
@@ -539,6 +554,7 @@ main {
 
       .related-posts-wrapper {
 
+        max-width: 1600px;
         padding: 0 160px;
         width: 100%;
         position: relative;
@@ -609,8 +625,7 @@ main {
 
 .footer {
 
-  max-height: 1600px;
-  padding: 2rem 160px;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -626,6 +641,8 @@ main {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    max-width: 1600px;
+    padding: 0 160px;
 
     .footer-logo {
 
