--- a/src/layouts/responsive.scss
+++ b/src/layouts/responsive.scss
@@ -165,7 +165,7 @@
 
         .claim {
           width: 60%;
-          padding-top: 130px;
+          padding-top: 80px;
         }
       }
 
@@ -230,7 +230,7 @@
       flex-direction: column;
 
       &.has-related-posts {
-        margin-bottom: 370px;
+        margin-bottom: 470px;
       }
 
       .image-type-featured {
@@ -512,7 +512,7 @@
         .claim {
 
           width: 100%;
-          padding: 130px 40px 40px;
+          padding: 80px 40px 40px;
 
           h1 {
             margin-bottom: 20px;
